# Alita

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/realxie/vulkandemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RealRenderer.cpp  RealRenderer.h  VulkanDemo.cpp  VulkanDemo.h  main.cpp  native-lib.cpp
app/src/main/cpp/Base/: Component.h  Componment.cpp  Componment.h  Entity.cpp  Entity.h  Macros.h  ObjectBase.h
app/src/main/cpp/Engine/: Engine.cpp  Engine.h
app/src/main/cpp/Meshes/: AbstractMesh.h  MeshBuilder.cpp  MeshBuilder.h  SubMesh.h  VertexBuffer.h
app/src/main/cpp/RHI/Include/: Descriptors.h  Device.h  Macros.h  RHI.h  RenderPipleine.h  SwapChain.h
app/src/main/cpp/RHI/backend/Vulkan/: CMakeLists.txt  ShaderHelper.cpp  ShaderHelper.h  VKBindGroup.cpp  VKBindGroup.h  VKBindGroupLayout.cpp  VKBindGroupLayout.h  VKBindingResources.cpp  VKBindingResources.h  VKBuffer.cpp  VKBuffer.h  VKCommandBuffer.cpp  VKCommandBuffer.h  VKCommandEncoder.cpp  VKCommandEncoder.h  VKDevice.cpp  VKDevice.h  VKGraphicPipeline.cpp  VKGraphicPipeline.h  VKPipelineLayout.cpp  VKPipelineLayout.h  VKQueue.cpp  VKQueue.h  VKRenderPass.cpp  VKRenderPass.h  VKRenderPassEncoder.cpp  VKRenderPassEncoder.h  VKRenderPipeline.cpp  VKRenderPipeline.h  VKRenderQueue.h  VKSampler.cpp  VKSampler.h  VKShader.cpp  VKShader.h  VKSwapChain.cpp  VKSwapChain.h  VKTexture.cpp  VKTexture.h  VKTextureView.cpp  VKTextureView.h  (+5 more)
app/src/main/cpp/RHI/include/: BindGroup.h  BindGroupLayout.h  BindingResource.h  Buffer.h  CommandBuffer.h  CommandEncoder.h  Descriptors.h  Device.h  Flags.h  GraphicPipleine.h  Macros.h  PipelineLayout.h  Queue.h  RHI.h  RHIObjectBase.h  RenderEncoder.h  RenderPass.h  RenderPassEncoder.h  RenderPipleine.h  RenderQueue.h  RenderTarget.h  Sampler.h  Shader.h  SwapChain.h  Texture.h  TextureView.h  UniformBufferObject.h
app/src/main/cpp/Render/: RealRenderer.cpp  RealRenderer.h
app/src/main/cpp/World/: BaseMesh.cpp  BaseMesh.h  Camera.cpp  Camera.h  IMesh.h  Level.cpp  Level.h  MeshComponent.cpp  MeshComponent.h  Model.cpp  Model.h  SceneComponent.h  World.cpp  World.h
app/src/main/cpp/aux/: AFileSystem.cpp  AFileSystem.h  Aux.cpp  Aux.h
app/src/main/cpp/jni/: native-lib.cpp
app/src/main/cpp/render/: RealRenderer.cpp  RealRenderer.h  shaders.h
app/src/main/cpp/types/: TData.h  Types.h
app/src/main/java/com/realxie/alita/: MainActivity.java  VulkanSurfaceView.java
app/src/main/java/com/realxie/vulkandemo/: MainActivity.java  VulkanSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/realxie/vulkandemo/: ExampleUnitTest.java
assets/shaders/: compile_glsl_to_spirv.py  shader.frag  shader.vert  shader.vert.spv  translate.py
res/layout/: abc_alert_dialog_title_material.xml  activity_main.xml
res/layout-v21/: notification_template_custom_big.xml
res/layout-watch-v20/: abc_alert_dialog_title_material.xml
